--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".base.SplashActivity">
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,8 +25,11 @@
 
         <activity android:name=".MainActivity"/>
 
+        <activity android:name=".sign.SignInActivity"/>
+
         <activity android:name=".sign.SignUpActivity"/>
 
+        <activity android:name=".HomeActivity"/>
     </application>
 
 </manifest>
